--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ $<!doctype html>
   </head>
   <body>
       
-     <h1>hello this is a website</h1>
-
-
-
+     <h1>hello this is a websitegit status</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci corporis repellat fuga, excepturi explicabo, tempora fugit itaque libero unde rem sapiente. Quisquam totam porro perspiciatis, quibusdam rerum ratione cum assumenda!git
+      </p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
